Remove most content from homepage

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -1,362 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html><head><title>Kaifei Chen</title>
-
-
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-<link href="style.css" rel="stylesheet" type="text/css" />
-
-<!--[if IE 7]> <link href="ie.css" rel="stylesheet" type="text/css" /> <![endif]-->
-
-<link rel="shortcut icon" href="Favicon.ico" />
-
-<script type="text/javascript">
-
-var _gaq = _gaq || [];
-
-_gaq.push(['_setAccount', 'UA-25679190-1']);
-
-_gaq.push(['_trackPageview']);
-
-(function() {
-
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-
-})();
-
-</script>
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Kaifei Chen</title>
 </head>
 
-
-
 <body>
-
-<div id="wrap">
-
-<div id="header">
-
-<h1 id="sitename"> <a href="#">Kaifei Chen</a></h1>
-
-<div id="topmenu">
-
-<ul>
-
-<li class="active"> <a href="#">Home</a>
-
-</li>
-
-<li> <a href="Research/Research.html">Research</a>
-
-</li>
-
-<li> <a href="Publications/Publications.html">Publications</a>
-
-</li>
-
-<li> <a href="Education/Education.html">Education</a>
-
-</li>
-
-<li> <a href="CV/CV.php">CV</a> </li>
-
-<li> <a href="Miscellaneous/Miscellaneous.html">Miscellaneous</a>
-
-</li>
-
-</ul>
-
-</div>
-
-</div>
-
-<div id="content">
-
-<table border="0">
-
-<tbody>
-
-<tr>
-
-<td style="text-align: center;" rowspan="6"><img src="img/Figure.jpg" alt="Kaifei Chen" width="192" />
-
-<p align="center"> at Microsoft Research Asia </p>
-
-</td>
-
-<td style="text-align: left;" colspan="2">
-
-<h2>Info</h2>
-
-<!--<a HREF="http://kaifeichen.blogspot.com/" TARGET="_blank"><img ALIGN="right" STYLE="border: 0px solid ; width: 25px; height: 25px;" SRC="img/BloggerIcon.png" ALT="Blogger"></a>-->
-
-<a href="http://cn.linkedin.com/in/ckfbernard/" target="_blank"><img style="border: 0px solid ; width: 25px; height: 25px;" src="img/LinkedinIcon.png" alt="LinkedIn" align="right" /></a><a href="http://twitter.com/ckfbernard/" target="_blank"><img style="border: 0px solid ; width: 25px; height: 25px;" src="img/TwitterIcon.png" alt="Twitter" align="right" /></a>
-
-<a href="https://plus.google.com/100900608094169447168/" target="_blank"><img style="border: 0px solid ; width: 25px; height: 25px;" src="img/GplusIcon.png" alt="Google+" align="right" /></a><a href="http://www.facebook.com/ckfbernard/" target="_blank"><img style="border: 0px solid ; width: 25px; height: 25px;" src="img/FacebookIcon.png" alt="Facebook" align="right" /></a></td>
-
-</tr>
-
-<tr>
-
-<th style="text-align: left;"> Address: </th>
-
-<td style="text-align: left;">
-
-<p>RADLab, Room 465 Soda Hall #1776<br />
-
-University of California, Berkeley<br />
-
-Berkeley, CA 94720-1776 </p>
-
-</td>
-
-</tr>
-
-<tr>
-
-<th style="text-align: left;">
-
-Email: </th>
-
-<td style="text-align: left;"> kai<a href="http://www.google.com/recaptcha/mailhide/d?k=014lDb-V1hg3z8DMKRl2WvHA==&amp;c=vhrINYY04gkiIk2K-U1kwsiok91_qyfHz6p_mrjIyts=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014lDb-V1hg3z8DMKRl2WvHA\75\75\46c\75vhrINYY04gkiIk2K-U1kwsiok91_qyfHz6p_mrjIyts\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address" style="color: rgb(183, 24, 0);">...</a>@berkeley.edu </td>
-
-</tr>
-
-<tr style="text-align: left;">
-
-<td style="text-align: left;"> &nbsp; </td>
-
-</tr>
-
-<tr style="text-align: left;">
-
-<td style="text-align: left;"> &nbsp; </td>
-
-</tr>
-
-</tbody>
-
-</table>
-
-<h2> Bio </h2>
-
-<p align="justify">&nbsp;</p>
-
-<p align="justify"> I am a first year Ph.D. student of
-
-Computer Science at&nbsp;<a href="http://berkeley.edu/" target="_blank">University of California, Berkeley</a>.
-
-I am working on the <a href="http://local.cs.berkeley.edu/">LoCal</a>.</p>
-
-<p align="justify">&nbsp;</p>
-
-<p align="justify">I received bachelor degree of Computer
-
-Science and Technology from <a href="http://en.ustc.edu.cn/" target="_blank">University of Science and Technology of China</a>
-
-(USTC). During my undergraduate, I spent six months at <a href="http://www.cmu.edu/silicon-valley/" target="_blank">Carnegie
-
-Mellon University Silicon Valley</a> (CMUSV) as a visiting
-
-student working with Prof. <a href="http://www.ece.cmu.edu/%7Epeizhang/" target="_blank">Pei
-
-Zhang</a>. I was working on <a href="Research/SensorFly.html">SensorFly</a>
-
-and <a href="Research/PANDAA.html">PANDAA</a> at
-
-CMUSV. After that, I joined the <a href="http://research.microsoft.com/en-us/groups/mass/" target="_blank">Mobile and Sensing Systems group</a>
-
-at <a href="http://research.microsoft.com/en-us/labs/asia/default.aspx">Microsoft
-
-Research Asia</a> (MSRA), working with my research mentor Dr. <a href="http://research.microsoft.com/people/cmliang/" target="_blank">Chieh-Jan Mike Liang</a>. I was
-
-involved in <a href="Research/LiveSynergy.html">LiveSynergy</a>
-
-and a large-scale RFID-based asset-tracking system.</p>
-
-<p align="justify">&nbsp;</p>
-
-<p align="justify"> I have two full papers published in <a href="http://www.ubicomp.org/ubicomp2011/" target="_blank">UbiComp
-
-2011</a> and <a href="http://ipsn.acm.org/2012/" target="_blank">IPSN 2012</a>. And I also won two Best
-
-Demo Awards at <a href="http://www.ubicomp.org/ubicomp2011/" target="_blank">UbiComp 2011</a> and<a href="http://sensys.acm.org/2011/" target="_blank">
-
-SenSys 2011</a> respectively.</p>
-
-<p align="justify">&nbsp;</p>
-
-<h2 align="justify"> Recent News</h2>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Aug. 2012: I'm in UC Berkeley now.</li>
-
-</ul>
-
-<ul style="text-align: justify;">
-
-<li>Mar. 2012: Our paper “Location-log: Bringing Online
-
-Shopping Benefits to the Physical World with Magnetic-based Proximity
-
-Detection” is accepted in the 2nd International Workshop on Mobile
-
-Sensing (<a href="http://research.microsoft.com/en-us/um/beijing/events/ms_ipsn12/index.html" target="_blank">MS 2012</a>).</li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Feb. 2012: Our poster “Poster Abstract: Shipping Data from
-
-Heterogeneous Protocols on Packet Train” is accepted in the 11th
-
-ACM/IEEE Conference on Information Processing in Sensor Networks (<a href="http://ipsn.acm.org/2012/" target="_blank">IPSN
-
-2012</a>).</li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Jan. 2012: Our full paper “Design and Evaluation of a
-
-Wireless Magnetic-based Proximity Detection Platform for Indoor
-
-Applications” is accepted in the 11th ACM/IEEE Conference on
-
-Information Processing in Sensor Networks (<a href="http://ipsn.acm.org/2012/" target="_blank">IPSN
-
-2012</a>). <strong>(Acceptance rate = 22/147 = 15.0%)</strong></li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Nov. 2011: Our LiveSynergy demo “<a href="Publications/data/SenSys2011LiveSynergyDemo.pdf" target="_blank">Creating Interactive Virtual Zones in
-
-Physical Space with Magnetic-Induction</a>” wins the <strong><font color="#cc6600">Best Demo Award</font></strong>
-
-in <a href="http://sensys.acm.org/2011/" target="_blank">SenSys
-
-2011</a>.</li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Oct. 2011: The accompanying demo of “<a href="Publications/data/UbiComp2011PANDAA.pdf" target="_blank">PANDAA:
-
-Physical Arrangement Detection of Networked Devices through
-
-Ambient-Sound Awareness</a>” wins the <strong><font color="#cc6600">Best Demo Award</font></strong>
-
-in <a href="http://www.ubicomp.org/ubicomp2011/" target="_blank">UbiComp 2011</a>.</li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Aug. 2011: Our demo “<a href="Publications/data/SenSys2011LiveSynergyDemo.pdf" target="_blank">Demo: Creating Interactive Virtual Zones in
-
-Physical Space with Magnetic-Induction</a>" is accepted in the
-
-9th ACM Conference on Embedded Networked Sensor Systems (<a href="http://sensys.acm.org/2011/" target="_blank">SenSys
-
-2011</a>). </li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Jun. 2011: Our full paper “<a href="Publications/data/UbiComp2011PANDAA.pdf" target="_blank">PANDAA:
-
-Physical Arrangement Detection of Networked Devices through
-
-Ambient-Sound Awareness</a>” is accepted in the 13th ACM
-
-International Conference on Ubiquitous Computing (<a href="http://www.ubicomp.org/ubicomp2011/" target="_blank">Ubicomp
-
-2011</a>). <strong>(Acceptance rate = 50/302 = 16.6%)</strong></li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Apr. 2011: I am a research intern in <a href="http://research.microsoft.com/en-us/groups/mass/" target="_blank">Mobile and Sensing Systems group</a>
-
-at <a href="http://research.microsoft.com/en-us/labs/asia/" target="_blank">Microsoft Research Asia</a> now and
-
-will stay till my graduation in 2012 summer.</li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Nov. 2010: “<a href="Publications/data/CUMCM2010Paper.pdf" target="_blank">Modication
-
-and Calibration of Capacity Tables of Tilted Tank</a>” (in
-
-Chinese) wins 2nd prize in the 19th Contemporary Undergraduate
-
-Mathematical Contest in Modeling (<a href="http://en.mcm.edu.cn" target="_blank">CUMCM 2010</a>). <strong>(in
-
-top 7.9% among 14108 teams)</strong></li>
-
-</ul>
-
-<p align="justify">&nbsp;</p>
-
-<ul style="text-align: justify;">
-
-<li>Sept. 2010: I am a visiting student in <a href="http://www.cmu.edu/silicon-valley/" target="_blank">Carnegie
-
-Mellon University Silicon Valley</a> now and will stay for 6
-
-months.</li>
-
-</ul>
-
-</div>
-
-<div id="footer">
-
-<div id="ft_btm"> Last updated on<!-- #BeginDate format:IS1 -->
-
-2012-05-01<!-- #EndDate --> <br />
-
-<br />
-
-<br />
-
-</div>
-
-</div>
-
-</div>
-
-</body></html>
+<p><img width="200" src="./Figure.jpg"></p>
+<p>kaifei@berkeley.edu</p>
+<p>410 Soda Hall, UC Berkeley</p>
+<br>
+<p> Kaifei Chen is currently a Ph.D. student in Computer Science at University of California, Berkeley. He is part of the Software Defined Buildings group.</p>
+<p>He received bachelor's degree of Computer Science and Technology from University of Science and Technology of China. He has been visiting student of Prof. Pei Zhang in Carnegie Mellon University Silicon Valley (2010-2011). He also worked with Dr. Chieh-Jan Mike Liang and Dr. Fred Xiaofan Jiang in Mobile and Sensing Systems group at Microsoft Research Asia (2011-2012).</p>
+<br>
+<h3>Publications</h3>
+<h4>Conferences</h4>
+<p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
+  Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
+  IPSN 2012</p>
+<p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
+  Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
+  UbiComp 2011<br>
+  <strong>Affiliated demo wins the Best Demo Award</strong></p>
+<h4>Workshops</h4>
+<p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
+  Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
+  BuildSys 2012 </p>
+<p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
+  Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Mike Chieh-Jan Liang, and Feng Zhao.<br>
+  Mobile Sensing 2012 </p>
+<h4>Posters and Demos</h4>
+<p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
+  Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
+  SenSys 2011<br>
+  <strong>Best Demo Award</strong> </p>
+<br>
+</body>
+</html>
