--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<p><img width="200" src="./Figure.jpg"></p>
+<p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
 <p>kaifei@berkeley.edu</p>
 <p>410 Soda Hall, UC Berkeley</p>
 <br>
@@ -28,8 +28,11 @@
   BuildSys 2012 </p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Mike Chieh-Jan Liang, and Feng Zhao.<br>
-  Mobile Sensing 2012 </p>
+  International Workshop on Mobile Sensing 2012 </p>
 <h4>Posters and Demos</h4>
+<p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
+  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
+  IPSN 2012 </p>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
