--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -15,6 +15,9 @@
 <br>
 <h3>Publications</h3>
 <h4>Conferences</h4>
+<p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
+  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
+  SenSys 2014</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
   IPSN 2012</p>
@@ -29,14 +32,14 @@
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Mike Chieh-Jan Liang, and Feng Zhao.<br>
   International Workshop on Mobile Sensing 2012 </p>
-<h4>Posters and Demos</h4>
-<p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
-  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
-  IPSN 2012 </p>
+<h4>Demos and Posters</h4>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
   <strong>Best Demo Award</strong> </p>
+<p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
+  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
+  IPSN 2012 </p>
 <br>
 </body>
 </html>
