--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -24,8 +24,11 @@
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
-  <strong>Affiliated demo wins the Best Demo Award</strong></p>
+  <i>Affiliated demo wins the Best Demo Award</i></p>
 <h4>Workshops</h4>
+<p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
+  <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, David E. Culler<br>
+  IoT-Sys 2015 </p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
   BuildSys 2012 </p>
@@ -36,7 +39,7 @@
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
-  <strong>Best Demo Award</strong> </p>
+  <i>Best Demo Award</i> </p>
 <p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
   IPSN 2012 </p>
