--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -17,32 +17,40 @@
 <h4>Conferences</h4>
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
-  SenSys 2014</p>
+  SenSys 2014<br>
+  [<a href="./data/sensys_14.pdf">PDF</a>]</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
-  IPSN 2012</p>
+  IPSN 2012<br>
+  [<a href="./data/ipsn_12.pdf">PDF</a>]</p>
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
-  <i>Affiliated demo wins the Best Demo Award</i></p>
+  <i>Affiliated demo wins the Best Demo Award</i><br>
+  [<a href="./data/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
-  <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, David E. Culler<br>
-  IoT-Sys 2015 </p>
+  <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
+  IoT-Sys 2015<br>
+  [<a href="./data/iot-sys_15.pdf">PDF</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
-  BuildSys 2012 </p>
+  BuildSys 2012<br>
+  [<a href="./data/buildsys_12.pdf">PDF</a>]</p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Mike Chieh-Jan Liang, and Feng Zhao.<br>
-  International Workshop on Mobile Sensing 2012 </p>
+  International Workshop on Mobile Sensing 2012<br>
+  [<a href="./data/wms_12.pdf">PDF</a>]</p>
 <h4>Demos and Posters</h4>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
-  <i>Best Demo Award</i> </p>
+  <i>Best Demo Award</i><br>
+  [<a href="./data/sensys_demo_11.pdf">PDF</a>]</p>
 <p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
-  IPSN 2012 </p>
+  IPSN 2012<br>
+  [<a href="./data/ipsn_poster_12.pdf">PDF</a>]</p>
 <br>
 </body>
 </html>
