--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -18,7 +18,7 @@
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
   SenSys 2014<br>
-  [<a href="./data/sensys_14.pdf">PDF</a>]</p>
+  [<a href="./data/sensys_14.pdf">PDF</a>][<a href="./data/sensys_14.pptx">Slides</a>]</p>
 <p>Design and Evaluation of a Wireless Magnetic-based Proximity Detection Platform for Indoor Applications<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Ben Zhang, Jeff Hsu, Bin Cao, Jie Liu, and Feng Zhao.<br>
   IPSN 2012<br>
@@ -32,7 +32,7 @@
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
   <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
   IoT-Sys 2015<br>
-  [<a href="./data/iot-sys_15.pdf">PDF</a>]</p>
+  [<a href="./data/iot-sys_15.pdf">PDF</a>][<a href="./data/iot-sys_15.pptx">Slides</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
   BuildSys 2012<br>
