Add google scholar link and remove bio

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -9,9 +9,9 @@
 <p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
 <p>kaifei@berkeley.edu</p>
 <p>410 Soda Hall, UC Berkeley</p>
+<p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p> Kaifei Chen is currently a Ph.D. student in Computer Science at University of California, Berkeley. He is part of the Software Defined Buildings group.</p>
-<p>He received bachelor's degree of Computer Science and Technology from University of Science and Technology of China. He has been visiting student of Prof. Pei Zhang in Carnegie Mellon University Silicon Valley (2010-2011). He also worked with Dr. Chieh-Jan Mike Liang and Dr. Fred Xiaofan Jiang in Mobile and Sensing Systems group at Microsoft Research Asia (2011-2012).</p>
+<p>Kaifei Chen is currently a Ph.D. student in Computer Science at University of California, Berkeley. He is part of the Software Defined Buildings group.</p>
 <br>
 <h3>Publications</h3>
 <h4>Conferences</h4>
