Fix mike's name

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -38,7 +38,7 @@
   BuildSys 2012<br>
   [<a href="./data/buildsys_12.pdf">PDF</a>]</p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
-  Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Mike Chieh-Jan Liang, and Feng Zhao.<br>
+  Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Chieh-Jan Mike Liang, and Feng Zhao.<br>
   International Workshop on Mobile Sensing 2012<br>
   [<a href="./data/wms_12.pdf">PDF</a>]</p>
 <h4>Demos and Posters</h4>
