Add name in HTML

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -7,6 +7,7 @@
 
 <body>
 <p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
+<p>Kaifei Chen</p>
 <p>kaifei@berkeley.edu</p>
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
