Change IPSN12 poster title

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -43,7 +43,7 @@
   International Workshop on Mobile Sensing 2012<br>
   [<a href="./data/wms_12.pdf">PDF</a>]</p>
 <h4>Demos and Posters</h4>
-<p>Poster: Shipping Data from Heterogeneous Protocols on Packet Train<br>
+<p>Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
   IPSN 2012<br>
   [<a href="./data/ipsn_poster_12.pdf">PDF</a>]</p>
