Update homepage with BuildSys'15 demo and poster

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -42,16 +42,25 @@
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Chieh-Jan Mike Liang, and Feng Zhao.<br>
   International Workshop on Mobile Sensing 2012<br>
   [<a href="./data/wms_12.pdf">PDF</a>]</p>
-<h4>Demos and Posters</h4>
-<p>Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train<br>
-  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
-  IPSN 2012<br>
-  [<a href="./data/ipsn_poster_12.pdf">PDF</a>]</p>
+<h4>Demos</h4>
+<p>Demo Abstract: Human-in-the-loop BMS Point Matching and Metadata Labeling with Babel<br>
+  Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
+  BuildSys 2015<br>
+  [<a href="./data/buildsys_15_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo: Creating Interactive Virtual Zones in Physical Space with Magnetic-Induction<br>
   Xiaofan Jiang, Chieh-Jan Mike Liang, Feng Zhao, <u>Kaifei Chen</u>, Jeff Hsu, Ben Zhang, and Jie Liu.<br>
   SenSys 2011<br>
   <i>Best Demo Award</i><br>
-  [<a href="./data/sensys_demo_11.pdf">PDF</a>]</p>
+  [<a href="./data/sensys_11_demo_abstract.pdf">PDF</a>]</p>
+<h4>Posters</h4>
+<p>Poster Abstract: Intuitive Appliance Identification using Image Matching in Smart Buildings<br>
+  <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, Dezhi Hong, and Randy H. Katz.<br>
+  BuildSys 2015<br>
+  [<a href="./data/buildsys_15_poster_abstract.pdf">PDF</a>] [<a href="./data/buildsys_15_poster.pdf">Poster</a>]</p>
+<p>Poster Abstract: Shipping Data from Heterogeneous Protocols on Packet Train<br>
+  Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
+  IPSN 2012<br>
+  [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <br>
 </body>
 </html>
