Update homepage bio description.

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -12,7 +12,7 @@
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p>Kaifei Chen is currently a Ph.D. student in Computer Science at University of California, Berkeley. He is part of the Software Defined Buildings group.</p>
+<p>I am a Ph.D. student in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. I am part of the <a href="http://sdb.cs.berkeley.edu/sdb/">Software Defined Buildings</a> group.</p>
 <br>
 <h3>Publications</h3>
 <h4>Conferences</h4>
