Add new papers and tech reports

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -16,6 +16,10 @@
 <br>
 <h3>Publications</h3>
 <h4>Conferences</h4>
+<p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
+  Jonathan Fürst, <u>Kaifei Chen</u>, Mohammed Aljarrah, and Philippe Bonnet.<br>
+  IoTDI 2016<br>
+  [<a href="./data/iotdi_16.pdf">PDF</a>]</p>
 <p>RushNet: Practical Traffic Prioritization for Saturated Wireless Sensor Networks<br>
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Nissanka Bodhi Priyantha, Jie Liu, and Feng Zhao.<br>
   SenSys 2014<br>
@@ -30,9 +34,13 @@
   <i>Affiliated demo wins the Best Demo Award</i><br>
   [<a href="./data/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
+<p>Crowd-sourced BMS Point Matching and Metadata Maintenance with Babel<br>
+  Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
+  International Workshop on Crowd-Assisted Sensing, Pervasive Systems, and Communications (CASPer) 2016<br>
+  [<a href="./data/casper_16.pdf">PDF</a>]</p>
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
   <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
-  IoT-Sys 2015<br>
+  International Workshop on IoT Challenges in Mobile and Industrial Systems (IoT-Sys) 2015<br>
   [<a href="./data/iot-sys_15.pdf">PDF</a>][<a href="./data/iot-sys_15.pptx">Slides</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
@@ -61,6 +69,15 @@
   Chieh-Jan Mike Liang, <u>Kaifei Chen</u>, Jie Liu, Nissanka Bodhi Priyantha, and Feng Zhao.<br>
   IPSN 2012<br>
   [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
+<h4>Technical Reports</h4>
+<p>Design and Evaluation of an Indoor Positioning System Framework<br>
+  <u>Kaifei Chen</u>, Karthik Reddy Vadde.<br>
+  UC Berkeley EECS Technical Reports<br>
+  [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-16.pdf">PDF</a>]</p>
+<p>Intuitive Appliance Identification using Image Matching in Smart Buildings<br>
+  <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, Dezhi Hong, David E. Culler, and Randy H. Katz.<br>
+  UC Berkeley EECS Technical Reports<br>
+  [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2015/EECS-2015-200.pdf">PDF</a>]</p>
 <br>
 </body>
 </html>
