Add TPC in website

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -14,6 +14,7 @@
 <br>
 <p>I am a Ph.D. student in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. I am part of the <a href="http://sdb.cs.berkeley.edu/sdb/">Software Defined Buildings</a> group.</p>
 <br>
+
 <h3>Publications</h3>
 <h4>Conferences</h4>
 <p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
@@ -79,5 +80,11 @@
   UC Berkeley EECS Technical Reports<br>
   [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2015/EECS-2015-200.pdf">PDF</a>]</p>
 <br>
+
+<h3>Community Serivces</h3>
+<p>Technical Program Committee<br>
+IPSN 2016 Demo</p>
+<p>Technical Program Committee<br>
+MobiSys 2016: PhD Forum</p>
 </body>
 </html>
