Add latest tech report

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -6,8 +6,9 @@
 </head>
 
 <body>
+<meta charset="utf-8">
 <p><img width="200" src="kaifei.jpg" onmouseover="this.src='coffee.jpg'" onmouseout="this.src='kaifei.jpg'"/></p>
-<p>Kaifei Chen</p>
+<p>Kaifei Chen (陈凯飞)</p>
 <p>kaifei@berkeley.edu</p>
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
@@ -71,13 +72,17 @@
   IPSN 2012<br>
   [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
+<p>CellMate: A Responsive and Accurate Vision-based Appliance Identification System<br>
+  <u>Kaifei Chen</u>, Takeshi Mochida, Jonathan Fürst, John Kolb, David E. Culler, Randy H. Katz<br>
+  UC Berkeley EECS Technical Reports 2016<br>
+  [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-154.pdf">PDF</a>]</p>
 <p>Design and Evaluation of an Indoor Positioning System Framework<br>
   <u>Kaifei Chen</u>, Karthik Reddy Vadde.<br>
-  UC Berkeley EECS Technical Reports<br>
+  UC Berkeley EECS Technical Reports 2016<br>
   [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-16.pdf">PDF</a>]</p>
 <p>Intuitive Appliance Identification using Image Matching in Smart Buildings<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, Dezhi Hong, David E. Culler, and Randy H. Katz.<br>
-  UC Berkeley EECS Technical Reports<br>
+  UC Berkeley EECS Technical Reports 2015<br>
   [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2015/EECS-2015-200.pdf">PDF</a>]</p>
 <br>
 
