--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -72,6 +72,10 @@
   IPSN 2012<br>
   [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
+<p>The Case for a Local Tier in the Internet of Things<br>
+  John Kolb, <u>Kaifei Chen</u>, Randy H. Katz<br>
+  UC Berkeley EECS Technical Reports 2016<br>
+  [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2016/EECS-2016-222.pdf">PDF</a>]</p>
 <p>CellMate: A Responsive and Accurate Vision-based Appliance Identification System<br>
   <u>Kaifei Chen</u>, Takeshi Mochida, Jonathan Fürst, John Kolb, David E. Culler, Randy H. Katz<br>
   UC Berkeley EECS Technical Reports 2016<br>
