add hotmobile 17 demo

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -53,6 +53,10 @@
   International Workshop on Mobile Sensing 2012<br>
   [<a href="./data/wms_12.pdf">PDF</a>]</p>
 <h4>Demos</h4>
+<p>Smart Appliance Identification using A Smartphone Camera<br>
+  <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, David E. Culler, and Randy H. Katz.<br>
+  HotMobile 2017<br>
+  [<a href="./data/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
 <p>Demo Abstract: Human-in-the-loop BMS Point Matching and Metadata Labeling with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
   BuildSys 2015<br>
