update cominuty service

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
 <br>
 
 <h3>Community Serivces</h3>
-<p>Technical Program Committee<br>
-IPSN 2016 Demo</p>
-<p>Technical Program Committee<br>
-MobiSys 2016: PhD Forum</p>
+<p>SenSys 2016 Demo Technical Program Committee</p>
+<p>IPSN 2016 Demo Technical Program Committee</p>
+<p>MobiSys 2016 PhD Forum Technical Program Committee</p>
 </body>
 </html>
