add TPC conf URLs, update SDB URL, add paper

--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p>I am a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. I am part of the <a href="http://sdb.cs.berkeley.edu/sdb/">Software Defined Buildings</a> group.</p>
+<p>I am a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. I am part of the <a href="https://softwaredefinedbuildings.github.io/sdb.cs.berkeley.edu/">Software Defined Buildings</a> group.</p>
 <br>
 
 <h3>Publications</h3>
 <h4>Conferences</h4>
+<p>Democratizing Authority in the Built Environment<br>
+Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
+  BuildSys 2017<br>
+  [<a href="./data/buildsys_17.pdf">PDF</a>]</p>
 <p>Leveraging Physical Locality to Integrate Smart Appliances in Non-Residential Buildings with Ultrasound and Bluetooth Low Energy<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Mohammed Aljarrah, and Philippe Bonnet.<br>
   IoTDI 2016<br>
@@ -95,8 +99,9 @@
 <br>
 
 <h3>Community Serivces</h3>
-<p>SenSys 2016 Demo Technical Program Committee</p>
-<p>IPSN 2016 Demo Technical Program Committee</p>
-<p>MobiSys 2016 PhD Forum Technical Program Committee</p>
+<p>TPC: <a href="http://secon2017.ieee-secon.org/workshop/1st-workshop-smart-and-connected-indoor-environments">1st Workshop on Smart and Connected Indoor Environments (SCIE)</a></p>
+<p>TPC: <a href="http://sensys.acm.org/2016/demos/">SenSys 2016 Demo</a></p>
+<p>TPC: <a href="http://ipsn.acm.org/2016/posters.html?v=1">IPSN 2016 Demo</a></p>
+<p>TPC: <a href="https://www.sigmobile.org/mobisys/2016/workshops/phd/index.htm">MobiSys 2016 PhD Forum</a></p>
 </body>
 </html>
