Update BETS website

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
-<p>I am a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. I am part of the <a href="https://softwaredefinedbuildings.github.io/sdb.cs.berkeley.edu/">Software Defined Buildings</a> group.</p>
+<p>Kaifei is a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. He is in the <a href="http://betswebsite.cs.berkeley.edu/">Building-Energy-Transportation Systems</a> group.</p>
 <br>
 
 <h3>Publications</h3>
