--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
 <p>PANDAA: Physical Arrangement Detection of Networked Devices through Ambient-Sound Awareness<br>
   Zheng Sun, Aveek Purohit, <u>Kaifei Chen</u>, Shijia Pan, Trevor Perring, and Pei Zhang.<br>
   UbiComp 2011<br>
-  <i>Affiliated demo wins the Best Demo Award</i><br>
+  <i>Affiliated demo won the Best Demo Award</i><br>
   [<a href="./data/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
 <p>Crowd-sourced BMS Point Matching and Metadata Maintenance with Babel<br>
