--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
 <h3>Publications</h3>
 <h4>Conferences</h4>
+<p>SnapLink: Fast and Accurate Vision-Based Appliance Control in Large Commercial Buildings<br>
+<u>Kaifei Chen</u>, Jonathan Fürst, John Kolb, Hyung-Sin Kim, Xin Jin, David E. Culler, and Randy H. Katz.<br>
+  IMWUT, Vol. 1, No. 4, 2017, to be presented at UbiComp 2018<br>
+  [<a href="./data/ubicomp_18.pdf">PDF</a>]</p>
 <p>Democratizing Authority in the Built Environment<br>
 Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Katz.<br>
   BuildSys 2017<br>
