add WAVE tech report

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   IPSN 2012<br>
   [<a href="./data/ipsn_12_poster_abstract.pdf">PDF</a>]</p>
 <h4>Technical Reports</h4>
+<p>WAVE: A Decentralized Authorization System for IoT via Blockchain Smart Contracts<br>
+  Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, Gabriel Fierro, David E. Culler, and Raluca Ada Popa.<br>
+  UC Berkeley EECS Technical Reports 2017<br>
+  [<a href="https://www2.eecs.berkeley.edu/Pubs/TechRpts/2017/EECS-2017-234.pdf">PDF</a>]</p>
 <p>The Case for a Local Tier in the Internet of Things<br>
   John Kolb, <u>Kaifei Chen</u>, Randy H. Katz<br>
   UC Berkeley EECS Technical Reports 2016<br>
