update website, add reviews and papers

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <p>410 Soda Hall, UC Berkeley</p>
 <p><a href="https://scholar.google.com/citations?user=AJ5xVAoAAAAJ&hl=en">Google Scholar Profile</a></p>
 <br>
+<p>Update: I'm now a Software Engineer at Waymo.</p>
 <p>Kaifei is a Ph.D. candidate in Computer Science at the <a href="http://www.berkeley.edu/">University of California, Berkeley</a>. He is in the <a href="http://bets.cs.berkeley.edu/">Building-Energy-Transportation Systems</a> group.</p>
 <br>
 
@@ -44,13 +45,21 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   <i>Affiliated demo won the Best Demo Award</i><br>
   [<a href="./data/ubicomp_11.pdf">PDF</a>]</p>
 <h4>Workshops</h4>
+<p>Towards Adaptive Actors for Scalable IoT Applications at the Edge<br>
+  Jonathan Fürst, Mauricio Fadel Argerich, <u>Kaifei Chen</u>, Ernö Kovacs<br>
+  The International Workshop on Very Large Internet of Things (VLIoT) 2018<br>
+  [<a href="https://www.ronpub.com/OJIOT_2018v4i1n06_Fuerst.pdf">PDF</a>]</p>
+<p>Evaluating Bluetooth Low Energy for IoT<br>
+  Jonathan Fürst, <u>Kaifei Chen</u>, Hyung-Sin Kim, Philippe Bonnet.<br>
+  The International Workshop on Benchmarking Cyber-Physical Networks and Systems (CPSBench) 2018<br>
+  [<a href="./data/cpsbench_18.pdf">PDF</a>]</p>
 <p>Crowd-sourced BMS Point Matching and Metadata Maintenance with Babel<br>
   Jonathan Fürst, <u>Kaifei Chen</u>, Randy H. Katz, and Philippe Bonnet.<br>
-  International Workshop on Crowd-Assisted Sensing, Pervasive Systems, and Communications (CASPer) 2016<br>
+  The International Workshop on Crowd-Assisted Sensing, Pervasive Systems, and Communications (CASPer) 2016<br>
   [<a href="./data/casper_16.pdf">PDF</a>]</p>
 <p>BearLoc: A Composable Distributed Framework for Indoor Localization Systems<br>
   <u>Kaifei Chen</u>, Siyuan He, Beidi Chen, John Kolb, Randy H. Katz, and David E. Culler.<br>
-  International Workshop on IoT Challenges in Mobile and Industrial Systems (IoT-Sys) 2015<br>
+  The International Workshop on IoT Challenges in Mobile and Industrial Systems (IoT-Sys) 2015<br>
   [<a href="./data/iot-sys_15.pdf">PDF</a>][<a href="./data/iot-sys_15.pptx">Slides</a>]</p>
 <p>Accurate Real-time Occupant Energy-footprinting in Commercial Buildings<br>
   Yun Cheng, <u>Kaifei Chen</u>, Ben Zhang, Chieh-Jan Mike Liang, Xiaofan Jiang, and Feng Zhao.<br>
@@ -58,10 +67,10 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   [<a href="./data/buildsys_12.pdf">PDF</a>]</p>
 <p>Location-log: Bringing Online Shopping Benefits to the Physical World with Magnetic-based Proximity Detection<br>
   Ben Zhang, <u>Kaifei Chen</u>, Yun Cheng, Xiaofan Jiang, Chieh-Jan Mike Liang, and Feng Zhao.<br>
-  International Workshop on Mobile Sensing 2012<br>
+  The International Workshop on Mobile Sensing 2012<br>
   [<a href="./data/wms_12.pdf">PDF</a>]</p>
 <h4>Demos</h4>
-<p>Smart Appliance Identification using A Smartphone Camera<br>
+<p>Smart Appliance Identification using Smartphone Camera<br>
   <u>Kaifei Chen</u>, John Kolb, Jonathan Fürst, David E. Culler, and Randy H. Katz.<br>
   HotMobile 2017<br>
   [<a href="./data/hotmobile_17_demo_abstract.pdf">PDF</a>]</p>
@@ -106,10 +115,10 @@ Michael P Andersen, John Kolb, <u>Kaifei Chen</u>, David E. Culler, and Randy Ka
   [<a href="http://www.eecs.berkeley.edu/Pubs/TechRpts/2015/EECS-2015-200.pdf">PDF</a>]</p>
 <br>
 
-<h3>Community Serivces</h3>
-<p>TPC: <a href="http://secon2017.ieee-secon.org/workshop/1st-workshop-smart-and-connected-indoor-environments">1st Workshop on Smart and Connected Indoor Environments (SCIE)</a></p>
-<p>TPC: <a href="http://sensys.acm.org/2016/demos/">SenSys 2016 Demo</a></p>
-<p>TPC: <a href="http://ipsn.acm.org/2016/posters.html?v=1">IPSN 2016 Demo</a></p>
-<p>TPC: <a href="https://www.sigmobile.org/mobisys/2016/workshops/phd/index.htm">MobiSys 2016 PhD Forum</a></p>
+<h3>Professional Activities:</h3>
+<p>2018: TPC: <a href="https://ubicomp18.github.io/workshop18-cpd/">CPD 2018 (Workshop in Ubicomp)</a>, Reviewer: <a href="http://infocom2019.ieee-infocom.org/">INFOCOM 2019</a>, <a href="http://ieee-iotj.org/">IEEE IoT Journal</a></p>
+<p>2017: TPC: <a href="http://secon2017.ieee-secon.org/workshop/1st-workshop-smart-and-connected-indoor-environments">SCIE 2017 (Workshop in SECON)</a></p>
+<p>2016: TPC: <a href="http://ipsn.acm.org/2016/posters.html">IPSN 2016 Demo</a>, <a href="http://sensys.acm.org/2016/demos/">SenSys 2016 Demo</a>, <a href="https://www.sigmobile.org/mobisys/2016/workshops/phd/index.htm">MobiSys 2016 PhD Forum</a></p>
+<p> 2014: Sub-reviewer: <a href="http://www.icpads.org/">ICPADS 2014</a></p>
 </body>
 </html>
